[gd_scene load_steps=3 format=3 uid="uid://cp0pa8oqu1qe5"]

[ext_resource type="Script" path="res://app/application/application.gd" id="1_3u0nu"]
[ext_resource type="PackedScene" uid="uid://beqa2jii05ekd" path="res://app/main-menu/main-menu.tscn" id="2_0lev3"]

[node name="Application" type="Node2D"]
script = ExtResource("1_3u0nu")

[node name="MainMenu" parent="." instance=ExtResource("2_0lev3")]

[connection signal="new_game" from="MainMenu" to="." method="new_game_with_mission"]
[connection signal="quit_game" from="MainMenu" to="." method="quit_game"]
